--- a/ImWayne/todolist/views/index.jade
+++ b/ImWayne/todolist/views/index.jade
@@ -4,20 +4,20 @@ block content
   div(style="margin-left:20px")
     h1 #{title}
     form(action='/create', method='post', accept-charset='utf-8')
-        input(type='text', name='content', placeholder='Enter Todo')
+        input(type='text', name='content', placeholder='輸入事項內容')
         input.btn.btn-default(type="submit", value="新增待辦事項", style="margin-left:20px")
 
   br
   br
   table.table
     tr
-      th Content
-      th Update at
-      th Deltete this
+      th 事項內容
+      th 修改時間
+      th 刪除事項
     for todo in todos
       tr
         td
             a(href="/edit/#{todo.id}", title="Update this todo item") #{todo.content}
-        td #{todo.update_at}
+        td #{todo.updated_at}
         td
             a(href="/destroy/#{todo.id}", title="Delete this todo item") Delete
